--- a/templates/dashboard/dt_dashboard.html
+++ b/templates/dashboard/dt_dashboard.html
@@ -133,7 +133,7 @@
                 </select>
             </div>
         </div>
-        <div class="phcList">
+        <!-- <div class="phcList">
             <div class="form-group">
 
                 <label class="d-inline-block ml-5" for="area_select">Select PHC:</label>
@@ -145,7 +145,7 @@
                     {% endfor %}
                 </select>
             </div>
-        </div>
+        </div> -->
     </div>
 
 </form>
@@ -3064,33 +3064,33 @@
     }
 
 
-    $(document).ready(function () {
-        // for FY 2017-2018 PHC dropdown is not visible
-        if (fy == '2017-2018' ) { // if somethings' selected
-            $(".phcList")[0].style.visibility = "hidden";  // hide all the elements
-        }
+    // $(document).ready(function () {
+    //     // for FY 2017-2018 PHC dropdown is not visible
+    //     if (fy == '2017-2018' ) { // if somethings' selected
+    //         $(".phcList")[0].style.visibility = "hidden";  // hide all the elements
+    //     }
 
-        $('#month-1').bind('change', function () {
-            let value = $(this).val();
+    //     $('#month-1').bind('change', function () {
+    //         let value = $(this).val();
             
-            let elements = $('.phcList').children().show(); // show the ones we want
-            if (value != 'All') { // if somethings' selected
-                elements.hide();  // hide all the elements
-            }
+    //         let elements = $('.phcList').children().show(); // show the ones we want
+    //         if (value != 'All') { // if somethings' selected
+    //             elements.hide();  // hide all the elements
+    //         }
             
-        }).trigger('change');
+    //     }).trigger('change');
 
-        // Mumbai and Mumbai Suburban PHCs are not visible for time-being
-        $('#areaDt').bind('change', function () {
-            let value = $(this).val();
-            var elements = $('.phcList').children().show(); // show the ones we want
-            if (value == '421' || value == '422') { // if somethings' selected
-                elements.hide();  // hide all the elements
-            }
+    //     // Mumbai and Mumbai Suburban PHCs are not visible for time-being
+    //     $('#areaDt').bind('change', function () {
+    //         let value = $(this).val();
+    //         var elements = $('.phcList').children().show(); // show the ones we want
+    //         if (value == '421' || value == '422') { // if somethings' selected
+    //             elements.hide();  // hide all the elements
+    //         }
             
-        }).trigger('change');
+    //     }).trigger('change');
 
-    });
+    // });
 
 </script>
 
