--- a/templates/mhbase.html
+++ b/templates/mhbase.html
@@ -54,7 +54,7 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-info justify-content-between">
-        <a class="navbar-brand" href="{% url 'home' %}">HMIS Data Analysis and Visualization</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Maharashtra HMIS Data Analysis and Visualization</a>
 
         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarsExample01"
             aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
