--- a/templates/hmis_dash/chldDiseaseBar.html
+++ b/templates/hmis_dash/chldDiseaseBar.html
@@ -87,7 +87,7 @@
     </div>
 
     <button type="button" class="btn btn-light m-1"
-        onclick="location.href=`{% url 'cd_barnumeric' dist_name fy %}`">Count</button>
+        onclick="location.href=`{% url 'cd_barnumeric' dist_name fy %}`">Go to Count</button>
 
     <!-- <div class="dropdown m-1">
     <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
