--- a/templates/hmis_dash/fy_ci_line.html
+++ b/templates/hmis_dash/fy_ci_line.html
@@ -124,7 +124,7 @@
         </select>
     </div>
 
-  <button type="button" class="btn btn-light m-1" onclick="location.href=`{% url 'fy_ci_lineNum' dist_name fy %}`">Count</button>
+  <button type="button" class="btn btn-light m-1" onclick="location.href=`{% url 'fy_ci_lineNum' dist_name fy %}`">Go to Count</button>
 
 
     <!-- <div class="dropdown m-1">
