--- a/templates/dashboard/dt_dashboard.html
+++ b/templates/dashboard/dt_dashboard.html
@@ -123,7 +123,7 @@
         <div class="dtList">
             <div class="form-group">
 
-                <label class="d-inline-block ml-5" for="area_select">Select Sub-District:</label>
+                <label class="d-inline-block ml-5" for="area_select">Select Block/Taluka:</label>
                 <select class="custom-select" name="area_select" id="areaSubDt" style="width: auto">
                     <option value="0" selected>Select</option>
                     {% for dist_select in dt_list %}
@@ -383,7 +383,7 @@
 
                             <tr>
                                 <td>1.2.1</td>
-                                <td colspan="6">Number of PW given TT1: <span id="st_nopwtt1"></span></td>
+                                <td colspan="6">Number of PW given TT1: <span id="st_nopwtt1"></span></td>
                                 <td colspan="2">
                                     <div class="btn-group dropright mr-1">
                                         <button type="button" class="btn btn-light dropdown-toggle numeric barColor"
@@ -463,7 +463,7 @@
 
                             <tr>
                                 <td>1.2.2</td>
-                                <td colspan="6">Number of PW given TT2:
+                                <td colspan="6">Number of PW given TT2:
                                     <span id="st_nopwtt2"></span>
                                 </td>
                                 <td colspan="2">
@@ -504,7 +504,7 @@
 
                             <tr>
                                 <td>1.2.3</td>
-                                <td colspan="6">Number of PW given TT Booster: <span id="st_nopwttbooster"></span></td>
+                                <td colspan="6">Number of PW given TT Booster: <span id="st_nopwttbooster"></span></td>
                                 <td colspan="2">
                                     <div class="btn-group dropright mr-1">
                                         <button type="button" class="btn btn-light dropdown-toggle numeric barColor"
