--- a/templates/hmis_dash/barNumericChart.html
+++ b/templates/hmis_dash/barNumericChart.html
@@ -93,7 +93,7 @@
         </div>
     </div>
 
-    <button type="button" class="btn btn-light m-1" onclick="location.href=`{% url 'barchart' dist_name fy %}`">Percent</button>
+    <button type="button" class="btn btn-light m-1" onclick="location.href=`{% url 'barchart' dist_name fy %}`">Go to Percent</button>
 
     <!-- <div class="dropdown m-1">
     <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
