--- a/templates/hmis_dash/chldImmuBar.html
+++ b/templates/hmis_dash/chldImmuBar.html
@@ -86,7 +86,7 @@
         </div>
     </div>
 
-    <button type="button" class="btn btn-light m-1" onclick="location.href=`{% url 'ci_barnumeric' dist_name fy %}`">Count</button>
+    <button type="button" class="btn btn-light m-1" onclick="location.href=`{% url 'ci_barnumeric' dist_name fy %}`">Go to Count</button>
 
     <!-- <div class="dropdown m-1">
     <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
