--- a/templates/hmis_dash/chldImmuLine.html
+++ b/templates/hmis_dash/chldImmuLine.html
@@ -122,7 +122,7 @@
     </select>
   </div>
 
-  <button type="button" class="btn btn-light m-1" onclick="location.href=`{% url 'ci_linenumeric' dist_name fy %}`">Count</button>
+  <button type="button" class="btn btn-light m-1" onclick="location.href=`{% url 'ci_linenumeric' dist_name fy %}`">Go to Count</button>
 
   <!-- <div class="dropdown m-1">
     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
