--- a/templates/hmis_dash/fy_cd_lineNum.html
+++ b/templates/hmis_dash/fy_cd_lineNum.html
@@ -123,7 +123,7 @@
         </select>
     </div>
 
-  <button type="button" class="btn btn-light m-1" onclick="location.href=`{% url 'fy_cd_line' dist_name fy %}`">Percent</button>
+  <button type="button" class="btn btn-light m-1" onclick="location.href=`{% url 'fy_cd_line' dist_name fy %}`">Go to Percent</button>
 
 
     <!-- <div class="dropdown m-1">
