--- a/templates/hmis_dash/lineNumericChart.html
+++ b/templates/hmis_dash/lineNumericChart.html
@@ -129,7 +129,7 @@
     </select>
   </div>
 
-  <button type="button" class="btn btn-light m-1" onclick="location.href=`{% url 'linechart' dist_name fy %}`">Percent</button>
+  <button type="button" class="btn btn-light m-1" onclick="location.href=`{% url 'linechart' dist_name fy %}`">Go to Percent</button>
 
   <!-- <div class="dropdown m-1">
     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
