--- a/templates/hmis_dash/chldImmuLine.html
+++ b/templates/hmis_dash/chldImmuLine.html
@@ -617,7 +617,7 @@
   function parseURLParameters() {
     var query = (window.location.search || '?').substr(1);
     var map = [];
-    query.replace(/([^&=]+)=?([^&]*)(?:&+|$)/g, function (match, key, value) {
+    query.replace(/([^&=]+)=?([^]*)(?:&+|$)/g, function (match, key, value) {
       map.push(value);
     });
     return map;
