--- a/templates/hmis_dash/mapChldImmu.html
+++ b/templates/hmis_dash/mapChldImmu.html
@@ -1373,7 +1373,7 @@ fetchGeoJSON();
   function parseURLParameters() {
     var query = (window.location.search || '?').substr(1);
     var map = [];
-    query.replace(/([^&=]+)=?([^&]*)(?:&+|$)/g, function (match, key, value) {
+    query.replace(/([^&=]+)=?([^]*)(?:&+|$)/g, function (match, key, value) {
       map.push(value);
     });
     return map;
